@@ -61,13 +61,13 @@ int main(int argc,char **argv)
       
       if (option == "-v") {
         verbose = 1;
-	ifile++;
-	break;
+        ifile++;
+        break;
       }
 
       if ((option == "-ff") && (argc > (i+1))) {
         ff = argv[i+1];
-	ifile += 2;
+        ifile += 2;
       }
     }
     
@@ -103,30 +103,30 @@ int main(int argc,char **argv)
   OBMol mol;
 
   for (c=1;;c++) {
-      mol.Clear();
-      if (!conv.Read(&mol, &ifs))
-        break;
-      if (mol.Empty())
-        break;
+    mol.Clear();
+    if (!conv.Read(&mol, &ifs))
+      break;
+    if (mol.Empty())
+      break;
 
-      OBForceField* pFF = OBForceField::FindForceField(ff);
-      if (!pFF) {
-        cerr << program_name << ": could not find forcefield '" << ff << "'." <<endl;
-        exit (-1);
-      }
+    OBForceField* pFF = OBForceField::FindForceField(ff);
+    if (!pFF) {
+      cerr << program_name << ": could not find forcefield '" << ff << "'." <<endl;
+      exit (-1);
+    }
  
-      pFF->SetLogFile(&cout);
-      if (verbose)
-        pFF->SetLogLevel(OBFF_LOGLVL_HIGH);
-      else
-        pFF->SetLogLevel(OBFF_LOGLVL_MEDIUM);
+    pFF->SetLogFile(&cout);
+    if (verbose)
+      pFF->SetLogLevel(OBFF_LOGLVL_HIGH);
+    else
+      pFF->SetLogLevel(OBFF_LOGLVL_MEDIUM);
       
-      if (!pFF->Setup(mol)) {
-        cerr << program_name << ": could not setup force field." << endl;
-        exit (-1);
-      }
+    if (!pFF->Setup(mol)) {
+      cerr << program_name << ": could not setup force field." << endl;
+      exit (-1);
+    }
       
-      pFF->Energy(false);
+    pFF->Energy(false);
 
   } // end for loop
 
